@@ -25,13 +25,13 @@ def polling(provider, login_required=False, permission=None):
 
 def crud(provider, action=None, login_required=False, permission=None):
     """
-    Very simple class decorator, just initialize the object. All the magic it's in the
-    __init__ method of BaseExtDirectCRUD. So, you must ensure that your class
-    inherit from ExtDirectCRUD.
+    Very simple class decorator, just initialize the object. All the magic it's in
+    BaseExtDirectCRUD. So, you must ensure that your class inherit from ExtDirectCRUD.
     """    
     def decorator(klass, action):        
         action = action or klass.__name__    
-        i = klass(provider, action, login_required, permission)
+        i = klass()
+        i.register_actions(provider, action, login_required, permission)
         
         return klass        
         
